# web-scraper

./: com.github.Latesil.web-scraper.web-scraper.json  meson.build
data/: com.github.Latesil.web-scraper.web-scraper.appdata.xml.in  com.github.Latesil.web-scraper.web-scraper.desktop.in  com.github.Latesil.web-scraper.web-scraper.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  web-scraper.in  web_scraper.gresource.xml  window.py  window.ui  window.ui~
